# redshift_planetid

./: .gitignore  Doxyfile  Makefile  README.md  conf.py  index.rst  make.bat
data/: plot.tbl  plot2.tbl
docs/: Makefile
docs/html/: annotated.html  classes.html  classpftest-members.html  classpftest.html  classutiltest-members.html  classutiltest.html  dir_0ef6eedc7f7d586c0d5d7b81a9b19c16.html  dir_120ed4da3e3217b1e7fc0b4f48568e79.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_62396243f14152d7d1fa130bf8f2f23c.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_98f417d6459bc1c8de685261b5e2bc88.html  fileops_8cpp.html  fileops_8h.html  fileops_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  hierarchy.html  index.html  pftest_8h_source.html  photo-fourier_8cpp.html  photo-fourier_8h.html  photo-fourier_8h_source.html  plus_8h.html  plus_8h_source.html  structphotoData-members.html  structphotoData.html  (+1 more)
planetid/: data.py  data.txt  labels.txt  lstm.py  saved.data-00000-of-00001  saved.index  server.py  test.py  test_data.txt  tf_lstm.py  train_data.txt  train_labels.txt
scripts/: build.sh  test.sh
src/: CMakeLists.txt  main.cpp
src/photo-fourier/: CMakeLists.txt  photo-fourier.cpp  photo-fourier.h  plus.cpp  plus.h
src/test/: CMakeLists.txt
src/test/photo-fourier-test/: CMakeLists.txt  pftest.cpp  pftest.h
src/test/utils-test/: CMakeLists.txt  utiltest.cpp  utiltest.h
src/utils/: CMakeLists.txt  fileops.cpp  fileops.h
utility/: gen_data  gen_data.cpp  out  train
(+36 files in other folders)
